# xop

./: CHANGELOG.md  CMakeLists.txt  CODING-GUIDELINES.md  CONTRIBUTING.md  README.md  conanfile.py
cmake/: basic.cmake  options.cmake  set_cuda.cmake  set_ifndef.cmake  set_version.cmake
scripts/: build_project.sh
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/onnxruntime/: corner_pool.h  deform_conv.h  grid_sample.h  helper_macros.h  modulated_deform_conv.h  nms.h  onnxruntime_name_domain_ep.h  onnxruntime_register.h  ort_mmcv_utils.h  reduce_ops.h  roi_align.h  roi_align_rotated.h  rotated_feature_align.h  soft_nms.h  stub.h  svtransformer.h
src/core/onnxruntime/cpu/: CMakeLists.txt  corner_pool.cpp  deform_conv.cpp  grid_sample.cpp  modulated_deform_conv.cpp  nms.cpp  onnxruntime_register.cpp  reduce_ops.cpp  roi_align.cpp  roi_align_rotated.cpp  rotated_feature_align.cpp  soft_nms.cpp  stub.cpp  svtransformer.cpp
src/core/pytorch/: CMakeLists.txt
src/core/pytorch/cpu/: CMakeLists.txt  common.h  mac.cpp  mac.h  svtransformerdecoder.h
src/test/: run.py  run.sh
src/test/data/: gridsampler.onnx  stub.onnx
src/test/scripts/: gridsample.py
src/test/simple/: svtransformerdecoder.cc
src/tutorials/PyTorchCustomOperator/: README.md
src/tutorials/PyTorchCustomOperator/ort_custom_op/: CMakeLists.txt  custom_op.cc  custom_op_test.cc
src/tutorials/PyTorchCustomOperator/pytorch_custom_op/: custom_group_norm.cpp  export_custom_op.py  model.onnx  setup.py
