# /**************************************************************
#  * @Copyright: 2021-2022 Copyright SAIC 
#  * @Author: lijinwen 
#  * @Date: 2022-08-29 10:14:11 
#  * @Last Modified by: lijinwen 
#  * @Last Modified time: 2022-09-09 14:34:02
#  **************************************************************/

add_subdirectory(core)
